<resources>
    <string name="app_name">together</string>
    <string name="str_count">Count</string>
    <string name="str_memories">Memories</string>
    <string name="str_together_for">Together for</string>
    <string name="str_years">years</string>
    <string name="str_months">months</string>
    <string name="str_days">days</string>
    <string name="str_or">- or -</string>
    <string name="str_upcoming">- Upcoming  -</string>
    <string name="str_setting">Setting</string>
    <string name="str_lock_screen">Lock screen</string>
    <string name="str_show_notification">Show notification</string>
    <string name="str_set_password">Set password</string>
    <string name="str_change_picture_boy">Change picture boy</string>
    <string name="str_change_picture_girl">Change picture girl</string>
    <string name="str_change_background">Change background</string>
    <string name="str_change_day_start">Change day start</string>
    <string name="str_more">More</string>
    <string name="str_rate_app">Rate app</string>
    <string name="str_share_app">Share app</string>
    <string name="str_feedback">Feedback</string>
    <string name="str_story">Story</string>
    <string name="str_save">Save</string>
    <string name="str_input_content">Input content…</string>
    <string name="str_enter_pin_code">Enter pin code</string>
    <string name="str_done">Done</string>
    <string name="str_delete"><font color='#EC5671'>Delete</font></string>
    <string name="str_edit"><font color='#78A1FF'>Edit</font></string>
    <string name="str_invalid">Invalid</string>
    <string name="str_new_story">Add new Story</string>
</resources>
