<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="countViewModel"
            type="com.kohuyn.together.ui.count.CountViewModel" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:focusable="true">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_90sdp"
                    android:layout_marginTop="@dimen/_100sdp">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/img_boy"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/_90sdp"
                        android:layout_marginStart="@dimen/_20sdp"
                        android:layout_weight="1"
                        android:src="@drawable/ic_avt_nam"
                        android:scaleType="centerInside"/>

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:orientation="vertical">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:layout_width="@dimen/_40sdp"
                            android:layout_height="@dimen/_40sdp"
                            android:layout_centerInParent="true"
                            android:src="@drawable/ic_heart" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/txt_date_start"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentBottom="true"
                            android:layout_marginTop="@dimen/_20sdp"
                            android:gravity="bottom"
                            android:textColor="@color/clr_date"
                            android:text="25/2/2016"
                            android:textSize="@dimen/_15sdp" />
                    </RelativeLayout>

                    <ImageView
                        android:id="@+id/img_girl"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/_90sdp"
                        android:layout_marginEnd="@dimen/_20sdp"
                        android:layout_weight="1"
                        android:src="@drawable/ic_avt_nu" />
                </LinearLayout>

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:text="@string/str_together_for"
                    android:textColor="@color/clr_white"
                    style="@style/TextAppearance.Text.Bold"
                    android:textSize="25sp" />

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_25sdp"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_10sdp">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/txt_years"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="3"
                        android:textColor="@color/clr_text_red"
                        android:textSize="25sp" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_years"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="@dimen/_3sdp"
                        android:layout_marginEnd="@dimen/_15sdp"
                        android:layout_toEndOf="@+id/txt_years"
                        android:gravity="bottom"
                        android:text="@string/str_years"
                        android:textColor="@color/clr_date"
                        android:textSize="18sp" />

                    <androidx.appcompat.widget.AppCompatTextView

                        android:id="@+id/txt_months"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toEndOf="@+id/tv_years"
                        tools:text="2"
                        android:textColor="@color/clr_text_red"
                        android:textSize="25sp" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_months"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="@dimen/_3sdp"
                        android:layout_marginEnd="@dimen/_15sdp"
                        android:layout_toEndOf="@+id/txt_months"
                        android:gravity="bottom"
                        android:text="@string/str_months"
                        android:textColor="@color/clr_date"
                        android:textSize="18sp" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/txt_days"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toEndOf="@+id/tv_months"
                        tools:text="2"
                        android:textColor="@color/clr_text_red"
                        android:textSize="25sp" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="@dimen/_3sdp"
                        android:layout_toEndOf="@+id/txt_days"
                        android:gravity="bottom"
                        android:text="@string/str_days"
                        android:textColor="@color/clr_date"
                        android:textSize="18sp" />
                </RelativeLayout>

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/_5sdp"
                    android:text="@string/str_or"
                    android:textColor="@color/clr_hint"
                    android:textSize="13sp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/txt_count_days"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="1403"
                        android:textColor="@color/clr_text_red"
                        android:textSize="25sp" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_3sdp"
                        android:gravity="bottom"
                        android:text="@string/str_days"
                        android:textColor="@color/clr_date"
                        android:textSize="13sp" />
                </LinearLayout>

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:text="@string/str_upcoming"
                    android:textColor="@color/clr_date"
                    android:textSize="13sp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rcv_event"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:paddingTop="@dimen/_5sdp"
                    tools:listitem="@layout/item_event" />
            </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</layout>